# pybrasil-rs

./: .gitignore  README.md  analysis-xlarge.ipynb  analysis.ipynb  pyproject.toml
data/: dim_content_metadata_medium.parquet  fact_content_performance_small.parquet
results/: pandas-pyarrow.csv  pandas.csv  polars.csv
src/pybrasil_rs/: benchmarks.py  data_generation.py  main.py  utils.py
