[project]
name = "pybrasil-rs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastparquet>=2024.11.0",
    "memory-profiler>=0.61.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "polars>=1.34.0",
    "psutil>=7.1.2",
    "pyarrow>=22.0.0",
    "rich>=14.2.0",
    "typer>=0.20.0",
]

[project.scripts]
demo = "pybrasil_rs.main:main"

[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "ruff>=0.14.2",
]
